# simulator

./: .gitignore  README.md
.github/workflows/: build.yaml
airsim/: .gitignore
airsim/examples/drone_spawn/: CMakeLists.txt  drone_spawn.cpp
airsim/examples/image_request/: CMakeLists.txt  image_request.cpp
airsim/examples/image_stream_request/: CMakeLists.txt  VideoEncoder.h  h264_stream_request.cpp  mp4_stream_request.cpp
airsim/examples/images_request/: CMakeLists.txt
airsim/examples/python/: command_drone_hover.py  command_drone_square.py  command_drone_straight_line.py  cv_mode.py
airsim/examples/trap_signal_emit/: CMakeLists.txt  trap_signal_emit.cpp
airsim/examples/visualization_cameras/: CMakeLists.txt  visualization_cameras.cpp
airsim/scripts/: launch.sh
airsim/scripts/target-1-fixed-trajectory/: airsim-settings.json  launch-hover.sh  launch-square.sh  launch-straight-line.sh  launch-straight-square.sh
airsim/scripts/target-2-fixed-trajectory/: airsim-settings.json
airsim/scripts/target-3-fixed-trajectory/: airsim-settings.json
airsim/scripts/target-3-manual/: launch-multiple-px4.sh  launch-the-second.sh  launch-the-third.sh
airsim/settings/: no-physics-settings.json  px4-multiple-settings-0.json  px4-single-settings.json  settings.json
cmake/: airsim.cmake
libs/: .gitignore
scripts/: build.sh  example_compile.sh  setup.sh  test.sh
